--- a/base/templates/base/assortment.html
+++ b/base/templates/base/assortment.html
@@ -1,6 +1,10 @@
 {% extends 'base/layout.html' %}
 {% load static %}
 
+{% block css %}
+    <link rel="shortcut icon" href="{%  static 'base/img/ass.png' %}">
+{% endblock %}
+
 {% block content %}
     <div class="shapka" style="display: flex;">
         <div class="mobilebtn">
