--- a/news/templates/news/news_home.html
+++ b/news/templates/news/news_home.html
@@ -3,6 +3,7 @@
 
 {% block css %}
     <link rel="stylesheet" href="{% static 'news/css/news.css' %}">
+    <link rel="shortcut icon" href="{%  static 'news/images/plus.png' %}">
 {% endblock %}
 
 {% block content %}
