--- a/users/templates/users/private_office.html
+++ b/users/templates/users/private_office.html
@@ -4,7 +4,8 @@
 {% load static %}
 
 {% block css %}
-        <link rel="stylesheet" href="{% static 'users/css/lk.css' %}">
+    <link rel="shortcut icon" href="{%  static 'users/images/lk.png' %}">
+    <link rel="stylesheet" href="{% static 'users/css/lk.css' %}">
 {% endblock %}
 
 <div class="prvt">
