--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -2,7 +2,8 @@
 {% load static %}
 
 {% block css %}
-<link rel="stylesheet" href="{% static 'users/css/register.css' %}">
+    <link rel="stylesheet" href="{% static 'users/css/register.css' %}">
+    <link rel="shortcut icon" href="{%  static 'users/images/register.png' %}">
 {% endblock %}
 
 {% block content %}
